--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "node scripts/prebuild",
     "build": "webpack -p --env production",
-    "build:analyze": "webpack -p --progress --env production",
+    "build:analyze": "webpack -p --env production",
     "start": "webpack-dev-server -d --env development "
   },
   "babel": {
@@ -29,7 +29,18 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.1",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.4.1",
     "terser-webpack-plugin": "^4.2.2",
@@ -38,5 +49,8 @@
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
